# project-movies

./: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yml
app/: .env.dev  Dockerfile  conftest.py  pyproject.toml  pytest.ini
app/drf_project/: settings.py  urls.py
app/movies/: admin.py  urls.py
app/movies/migrations/: 0002_movie.py  0003_rename_yar_movie_year.py  0004_auto_20210523_2234.py
app/tests/: test_foo.py
app/tests/movies/: test_models.py  test_serializers.py  test_view.py
drf_project/: settings.py
movies/migrations/: 0001_initial.py
