[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Victor Hugo <victorblog410@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.8.6"
pytest-django = "^4.3.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
